--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "chart.js": "^4.4.6",
         "vue-chartjs": "^5.3.2",
         "vue-material-design-icons": "^5.3.1",
+        "vue-router": "^4.0.13",
         "vue3-carousel": "^0.5.1"
     }
 }
